# merkle-tree-project

blockchain-frontend/: package-lock.json  package.json
blockchain-frontend/src/: App.css  App.js  index.css
blockchain_backend/: Cargo.toml
blockchain_backend/src/: main.rs
