# File: blockchain_backend/Cargo.toml
[package]
name = "blockchain_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
env_logger = "0.11"
log = "0.4"
actix-cors = "0.6" # Rất quan trọng để frontend có thể gọi API